<resources>
    <string name="app_name">InventoryStage1</string>
    <string name="product_name">PRODUCT NAME</string>
    <string name="product_name_hint">name of the product</string>
    <string name="product_price">PRODUCT PRICE</string>
    <string name="product_price_hint">price of the product</string>
    <string name="supplier_name">SUPPLIER NAME</string>
    <string name="supplier_name_hint">supplier name</string>
    <string name="supplier_number">SUPPLIER MOBILE NO.</string>
    <string name="supplier_number_hint"> mobile no.</string>
    <string name="quantity">QUANTITY</string>
    <string name="quantity_hint">quantity of product</string>
    <string name="action_save">SAVE</string>
    <string name="edit_activity_add_Label">Add A Product</string>
    <string name="edit_activity_edit_label">Edit Product</string>
    <string name="mainActivityLabel">Store</string>
    <string name="insert_error_toast">ERROR IN INSERTING DATA</string>
    <string name="insert_success_toast">PRODUCT ADDED</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="action_delete">Delete this Product</string>
    <string name="list_price_tag">Price : ₹ </string>
    <string name="detail_price_tag">₹" "</string>
    <string name="list_quantity_tag">Available : </string>
    <string name="empty_view_text">Store is Empty</string>
    <string name="update_fail_msg">NO CHANGES UPDATED</string>
    <string name="update_success_msg">PRODUCT Updated Successfully</string>
    <string name="unsaved_changes_dialog_msg">Discard Changes and Quit ?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_pet_failed">Deleting Failed</string>
    <string name="editor_delete_pet_successful">Product Deleted</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_msg">Are You Sure Delete the Product ?</string>
    <string name="delete">Delete</string>
    <string name="out_of_stock_msg">NO Products left to sell</string>
    <string name="increase_button">+</string>
    <string name="decrease_button">-</string>
    <string name="order_button">order</string>
    <string name="edit_empty_error">EmptyFields Cannot be inserted</string>
    <string name="invalid_price_quantity">INVALID DIGITS</string>
    <string name="invalid_mobile_number">Enter a valid mobile number</string>
    <string name="product_detail_activity_label">Product Details</string>
    <string name="edit_button">EDIT</string>
    <string name="sale_button">SALE</string>
    <string name="invalid_names">Names must be specified</string>
</resources>
