<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:orientation="vertical">

    <LinearLayout style="@style/DetailsViewStyle">

        <TextView
            style="@style/ColumnNameDetailTextStyle"
            android:text="@string/product_name" />

        <EditText
            android:id="@+id/in_product_name"
            style="@style/ColumnNameDetailTextStyle"
            android:hint="@string/product_name_hint"
            android:inputType="text"
            android:maxLength="20" />
    </LinearLayout>

    <LinearLayout style="@style/DetailsViewStyle">

        <TextView
            style="@style/ColumnNameDetailTextStyle"
            android:text="@string/product_price" />

        <EditText
            android:id="@+id/in_product_price"
            style="@style/ColumnNameDetailTextStyle"
            android:hint="@string/product_price_hint"
            android:inputType="number"
            android:maxLength="8" />
    </LinearLayout>

    <LinearLayout style="@style/DetailsViewStyle">

        <TextView
            style="@style/ColumnNameDetailTextStyle"
            android:text="@string/quantity" />

        <EditText
            android:id="@+id/in_quantity"
            style="@style/ColumnNameDetailTextStyle"
            android:hint="@string/quantity_hint"
            android:inputType="number"
            android:maxLength="5" />
    </LinearLayout>

    <LinearLayout style="@style/DetailsViewStyle">

        <TextView
            style="@style/ColumnNameDetailTextStyle"
            android:text="@string/supplier_name" />

        <EditText
            android:id="@+id/in_supplier_name"
            style="@style/ColumnNameDetailTextStyle"
            android:hint="@string/supplier_name_hint"
            android:inputType="text"
            android:maxLength="8" />
    </LinearLayout>

    <LinearLayout style="@style/DetailsViewStyle">

        <TextView
            style="@style/ColumnNameDetailTextStyle"
            android:text="@string/supplier_number" />

        <EditText
            android:id="@+id/in_supplier_number"
            style="@style/ColumnNameDetailTextStyle"
            android:hint="@string/supplier_number_hint"
            android:inputType="phone"
            android:maxLength="10" />
    </LinearLayout>


</LinearLayout>