<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:orientation="vertical">

    <LinearLayout
        style="@style/DetailsViewStyle"
        android:layout_marginBottom="@dimen/activity_margin">

        <TextView
            style="@style/ColumnNameDetailTextStyle"
            android:text="@string/product_name" />

        <TextView
            android:id="@+id/out_product_name"
            style="@style/ColumnValueDetailTextStyle"
            tools:text="milk" />
    </LinearLayout>

    <LinearLayout
        style="@style/DetailsViewStyle"
        android:layout_marginBottom="@dimen/activity_margin">

        <TextView
            style="@style/ColumnNameDetailTextStyle"
            android:text="@string/product_price" />

        <TextView
            android:id="@+id/out_product_price"
            style="@style/ColumnValueDetailTextStyle" />
    </LinearLayout>

    <LinearLayout
        style="@style/DetailsViewStyle"
        android:layout_marginBottom="@dimen/activity_margin">

        <TextView
            style="@style/ColumnNameDetailTextStyle"
            android:text="@string/supplier_name" />

        <TextView
            android:id="@+id/out_supplier_name"
            style="@style/ColumnValueDetailTextStyle"

            />
    </LinearLayout>

    <LinearLayout
        style="@style/DetailsViewStyle"
        android:layout_marginBottom="@dimen/activity_margin">

        <TextView
            style="@style/ColumnNameDetailTextStyle"
            android:text="@string/supplier_number" />

        <TextView
            android:id="@+id/out_supplier_number"
            style="@style/ColumnValueDetailTextStyle" />
    </LinearLayout>

    <LinearLayout
        style="@style/DetailsViewStyle"
        android:layout_marginBottom="@dimen/activity_margin">

        <TextView
            style="@style/ColumnNameDetailTextStyle"
            android:text="@string/quantity" />

        <Button
            android:id="@+id/quantity_decrease_button"
            style="@style/DetailButtonsStyle"
            android:text="@string/decrease_button" />

        <TextView
            android:id="@+id/out_quantity"
            style="@style/ColumnValueDetailTextStyle"
            android:gravity="center"
            tools:text="7" />

        <Button
            android:id="@+id/quantity_increase_button"
            style="@style/DetailButtonsStyle"
            android:text="@string/increase_button" />
    </LinearLayout>

    <Button
        android:id="@+id/productOrderButton"
        style="@style/DetailButtonsStyle"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_margin"
        android:text="@string/order_button" />

</LinearLayout>