<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="MILK" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="@string/list_price_tag" />

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="@string/list_quantity_tag" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/showButton"
            style="@style/ButtonStyle"
            android:text="@string/edit_button" />

        <Button
            android:id="@+id/saleButton"
            style="@style/ButtonStyle"
            android:text="@string/sale_button" />
    </LinearLayout>
</LinearLayout>